--- a/css/videolayout_default.css
+++ b/css/videolayout_default.css
@@ -377,6 +377,13 @@
     pointer-events: none;
 }
 
+#activeSpeakerAudioLevel {
+    visibility: hidden;
+    position: absolute;
+    top: 113px;
+    z-index: 1;
+}
+
 #mixedstream {
     display:none !important;
 }
@@ -388,6 +395,7 @@
     margin: auto;
     position: relative;
     border-radius: 50px;
+    z-index: 2;
 }
 
 .userAvatar {
